--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.mobileapplicationassignmentcsc2002">
+    package="com.example.mobileassignment2002">
 
     <application
         android:allowBackup="true"
@@ -11,8 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileApplicationAssignmentCSC2002"
+        android:theme="@style/Theme.MobileAssignment2002"
         tools:targetApi="31">
+        <activity
+            android:name=".Letter"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
