--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "MobileApplicationAssignmentCSC2002"
+rootProject.name = "MobileAssignment2002"
 include ':app'
